# so_long_rework

./: .gitignore  CMakeLists.txt  makefile  test_map.ber
backup/: init_game.c  init_map.c  main.c  map_check.c  move_player.c  utils1.c
includes/: error_msg.h  game.h  get_next_line.h  keycode_linux.h  keycode_mac.h  map.h  player.h  sprite.h  sprites.h  utils.h
includes/linux/: keycode_linux.h
map/: .ber  celadia_bonus.ber  classic.ber  classic_bonus.ber  small.ber  small_bonus.ber  test.ber  test_map.ber  test_map_bonus.ber  test_map_celadia.ber  test_map_small.ber  test_map_spiral.ber  test_map_way.ber
mlx_mac/: Makefile
source/: animation.c  check.c  check_arg.c  check_map.c  close.c  game_init.c  get_next_line.c  get_next_line_utils.c  hook.c  init.c  init_game.c  init_map.c  init_sprite.c  key_control.c  main.c  map_check.c  map_init.c  map_parser.c  move.c  move_ghost.c  move_player.c  render_frame.c  utils1.c  utils2.c
source/bonus/: close.c  init_game_bonus.c  init_sprite_bonus.c  map_check_bonus.c  move_ghost_bonus.c  print_move_bonus.c  render_frame_bonus.c  utils1.c  utils2.c
source/core/: animation.c  get_next_line_utils.c  hook.c  init_map.c  key_control_linux.c  key_control_mac.c  map_parser.c  move_player.c  pre_render.c  utils1.c  utils2.c
source/mandatory/: close.c  get_next_line.c  hook.c  init_game.c  init_sprite.c  main.c  map_check.c  move_ghost.c  print_move.c  render_frame.c
sprites/Other/Portal/: portal_close.xpm
